# projet-ISUP-Python

./: README.md  calculator.carbon.py  calculator_carbon.py  main.py  statistics_1.py  test_statistics_1.py  visualisation.py
Partie_1/: README.md  setup.cfg  vehicle_analyse.py
Partie_1/test/: test_visualisation.py
Partie_2/: README.md  setup.cfg
Partie_2/calculator_carbon/: calculator_carbon.py  energie.csv  selections_20241219_221824.json
Partie_2/tests/: test_calculator_carbon.py
