[metadata]
name = calculator_carbon.py
version = attr: calculator_carbon__version__
description = My package description
long_description = file:README.md

[options]
packages = find : 
install_requires = 
    json
    datetime import datetime
    tkinter
    tkinter import ttk, messagebox
    pandas as pd